# amazon_product_review_sentiment_analysis-mlops-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  eda.py  eda_report.txt  params.yaml  pyproject.toml  render.yaml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
artifacts/: model_comparison.json  training_summary.json
artifacts/best_model/: metadata.json  model.joblib
artifacts/embedding_logistic_regression/: classification_report.txt  metrics.json
artifacts/tfidf_linear_svc/: classification_report.txt  metrics.json  model.joblib
artifacts/tfidf_logistic_regression/: classification_report.txt  metrics.json
artifacts/tfidf_multinomial_nb/: classification_report.txt  metrics.json  model.joblib
config/: default.yaml
data/raw/: .gitignore  7817_1.csv.dvc
scripts/: predict.py  prepare_data.py  train.py
src/sentiment_analysis/: __init__.py  cli.py  config.py  constants.py
src/sentiment_analysis/api/: dependencies.py  main.py  schemas.py  server.py
src/sentiment_analysis/data/: __init__.py  loader.py  preprocessing.py
src/sentiment_analysis/evaluation/: __init__.py  metrics.py
src/sentiment_analysis/features/: __init__.py  vectorizers.py
src/sentiment_analysis/inference/: __init__.py  predictor.py
src/sentiment_analysis/models/: __init__.py  factory.py
src/sentiment_analysis/pipeline/: __init__.py  trainer.py
src/sentiment_analysis/services/: __init__.py  analytics_service.py  metrics_service.py  model_service.py
tests/: test_api.py  test_preprocessing.py
(+18 files in other folders)
