[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Production-grade NLP sentiment analysis pipeline for e-commerce reviews"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "mlflow>=2.10.0",
    "joblib>=1.3.0",
    "PyYAML>=6.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
train-sentiment = "sentiment_analysis.cli:main"
serve = "sentiment_analysis.api.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "dvc>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentiment_analysis = ["web/templates/*.html", "web/static/css/*", "web/static/js/*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
